feat:
Added GPLv3 header text in separeted file and refactored loading images
and general files

Added option for printing included program license